Ticket #14718 (closed defect: fixed)

Opened 8 months ago

Last modified 8 months ago

wxSizerXmlHandler::SetGrowables can make wxArgNormalizer assert

Reported by: dghart Owned by:
Priority: normal Milestone: 2.9.5
Component: XRC Version: 2.9-svn
Keywords: wxArgNormalizer assert Cc:
Blocked By: Patch: yes
Blocking:

Description

The ReportParamError() call in wxSizerXmlHandler::SetGrowables truncates a long to an int, triggering a wxArgNormalizer assert. The attached patch prevents this.

Attachments

xh_sizer.diff download (469 bytes) - added by dghart 8 months ago.

Change History

Changed 8 months ago by dghart

Changed 8 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [72603]) Fix assert about passing long as "%d" in wxXRC code.

Closes #14718.

Note: See TracTickets for help on using tickets.