Fix assert about passing long as "%d" in wxXRC code.

Closes #14718.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72603 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775